--- a/app/css/pagina_registrarse.css
+++ b/app/css/pagina_registrarse.css
@@ -174,6 +174,18 @@ header{
 	box-shadow: 3px 0px 30px rgb(255, 0, 0);
 }
 
+#alerta_usuario_repetido{
+	color: #bb2929;
+	font-style: bold;
+	font-size: large;
+}
+
+#alerta_usuario_correcto{
+	color: #119200;
+	font-style: bold;
+	font-size: large;
+}
+
 
 /*REACTIVE*/
 @media screen and (max-width: 800px) {
