--- a/app/css/tabla_todo.css
+++ b/app/css/tabla_todo.css
@@ -10,11 +10,29 @@ header{
     display: flex;
 }
 
-.header2 .searchbar{
+.agregar_comic{
+    display: flex;
+}
+
+.campo{
+    border: 1px solid black;
+    font-family: 'Bangers', cursive;
+    width: 200px;
+    height: 40px;
+    line-height: 30px;
+    text-align: center;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.campo input{
+    width: 100%;
+    height: 100%;
+}
+
+.searchbar{
     position: absolute;
-    right: 500px;
-    top: 0;
-    flex-direction: column;
+    right: 0;
 }
 
 #search{
@@ -26,7 +44,6 @@ header{
 
 .tabla{
     width: 100%;
-    position: absolute;
     /*margin-left: 16%;*/
     margin-top: 20px;
     
@@ -36,9 +53,11 @@ th,td{
     border: solid 1.5px black;
 }
 
-#agregar{
-    display: flex;
+.contenedor_agregar{
+    width: 100%;
+    margin: 20px;
 }
+
 
 .icono_link_descarga{
     padding: 17px;
@@ -59,4 +78,11 @@ th,td{
 
 #btn_borrar{
     background-color: red;
+}
+
+@media(max-width:800px){
+
+    .header2{
+        flex-direction: column;
+    }
 }
