--- a/app/css/pagina_principal.css
+++ b/app/css/pagina_principal.css
@@ -119,10 +119,13 @@ body{
     border: 3px solid transparent;
     border-radius: 13px;
     transition: .3s ease all;
+    /*border: 3px solid #0075FF;*/
+    border: solid;
+    border-color: #0075FF;
+    outline: none;
 }
 
 .input_cambio input:focus {
-	border: 3px solid #0075FF;
 	outline: none;
 	box-shadow: 3px 0px 30px #0075FF;
 }
@@ -204,19 +207,19 @@ body{
 }
 
 /*---------------------------------------------------------------------*/
-.grupo_registrar-mal .campo_input input{
-	border: 10px solid #bb2929;
+.grupo_registrar-mal .campo_input{
+	border: 3px solid #bb2929;
 }
 
-.grupo_registrar-bien .campo_input input{
+.grupo_registrar-bien .campo_input{
     border: 3px solid #119200;
 }
 
-.grupo_registrar-normal .campo__input:focus{
+/*.grupo_registrar-normal .campo__input:focus{
     border: 3px solid #0075FF;
 	outline: none;
 	box-shadow: 3px 0px 30px rgba(163,163,163, 0.4);
-}
+}*/
 /*---------------------------------------------------------------------*/
 
 
