--- a/app/css/pagina_registrarse.css
+++ b/app/css/pagina_registrarse.css
@@ -4,8 +4,9 @@
 
 body {
 	font-family: 'Roboto', sans-serif;
-	background: #E5E5E5;
+	background: radial-gradient(lightgrey,grey);
     margin: 0;
+	overflow-y: hidden;
 }
 
 main {
@@ -16,12 +17,22 @@ main {
 }
 
 header{
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    height: 80px;
-    padding: 10px;
-    background-color: lightgreen;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	height: 200px;
+    background-image: linear-gradient(to bottom,#0075FF,#0095ff);
+	font-family: 'Bangers', cursive;
+}
+
+header h1{
+	margin-top: 15px;
+	font-size: 80px;
+}
+
+header h2{
+	margin-top: -30px;
+	font-size: 70px;
 }
 
 .registro {
@@ -109,14 +120,18 @@ header{
 	height: 55px;
 	line-height: 45px;
 	width: 100%;
-	background: #000;
-	color: #fff;
+	background: black;
+	color: white;
 	font-weight: bold;
     font-size: 20px;
-	border: none;
+	border: 2px solid grey;
 	border-radius: 13px;
 	cursor: pointer;
 	transition: .1s ease all;
+}
+
+.campo__btn:hover{
+	box-shadow: 0px 0px 30px black;
 }
 
 .boton_desbloqueado .campo__btn {
@@ -160,18 +175,20 @@ header{
 	height: 55px;
 	line-height: 45px;
 	width: 100%;
-	background: #000;
-	color: #fff;
-	font-weight: bold;
+	background: black;
+	color: white;
     font-size: 20px;
-	border: none;
-	border-radius: 13px;
+	font-weight: bold;
+	border-style: solid;
+	border-width: 2px;
+	border-color: grey;
+	border-radius: 10px;
 	cursor: pointer;
 	transition: .1s ease all;
 }
 
 #link_volver:hover {
-	box-shadow: 3px 0px 30px rgb(255, 0, 0);
+	box-shadow: 0px 0px 40px black;
 }
 
 #alerta_usuario_repetido{
@@ -184,6 +201,13 @@ header{
 	color: #119200;
 	font-style: bold;
 	font-size: large;
+}
+
+footer{
+	margin-top: 40px;
+	height: 100vh;
+	width: 100%;
+	background-image: linear-gradient(to bottom,#0095ff,#0075FF);
 }
 
 
