--- a/app/css/pagina_iniciarsesion.css
+++ b/app/css/pagina_iniciarsesion.css
@@ -4,15 +4,29 @@
 
 body{
     margin: 0;
+    overflow-y: hidden;
+    background: radial-gradient(lightgrey,grey);
 }
 
 header{
-    justify-content: center;
-    align-items: center;
     display: flex;
-    height: 80px;
-    padding: 10px;
-    background-color: lightgreen;
+	flex-direction: column;
+	align-items: center;
+	height: 200px;
+    background-image: linear-gradient(to bottom,#0075FF,#0095ff);
+	font-family: 'Bangers', cursive;
+}
+
+header h1{
+	margin-top: 15px;
+	font-size: 80px;
+    font-family: 'Bangers', cursive;
+}
+
+header h2{
+	margin-top: -30px;
+	font-size: 70px;
+    font-family: 'Bangers', cursive;
 }
 
 #mensaje_incorrecto{
@@ -33,7 +47,7 @@ header{
 .registro_total input{
     text-align: center;
 	width: 100%;
-	background: rgb(226, 249, 255);
+	background: rgb(255, 255, 255);
 	border: 3px solid transparent;
 	border-radius: 13px;
 	height: 45px;
@@ -71,19 +85,29 @@ header{
     left: 30px;
 }
 
+.campo_inicio{
+    display: flex;
+    flex-direction: column;
+}
+
 .campos_inicio button{
-    width: 200px;
-    height: 40px;
-    border-style: solid;
-    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    background-color: transparent;
+    border: none;
     cursor: pointer;
-    font-family: 'Bangers', cursive;
-    font-size: large;
+    font-size: 20px;
+    font-family: sans-serif;
+
+}
+
+button:hover{
+    text-shadow: 0px 0px 10px rgb(0, 255, 0);
 }
 
 a{
     position: relative;
-    left: 25px;
+    left: 0;
     text-decoration: none;
     width: 200px;
     height: 35px;
@@ -92,9 +116,13 @@ a{
     text-align: center;
     align-items: center;
     font-family: sans-serif;
-    font-family: 'Bangers', cursive;
     color: black;
     font-size: large;
+    top: 20px;
+}
+
+a:hover{
+    text-shadow: 0px 0px 10px black;
 }
 
 
