--- a/app/css/pagina_principal1.css
+++ b/app/css/pagina_principal1.css
@@ -1,11 +1,11 @@
-/*SECTION DC*/
+/*SECTION marvel*/
 .contenedor_dc{
     margin: 0;
 }
 
 .contenedor_dc .dc_header{
     height: 240px;
-    border-style: solid;
+    
     background-image: linear-gradient(to right,#09C6F9,#045DE9);
 }
 
@@ -19,7 +19,242 @@
     cursor: pointer;
 }
 
-.contenedor_dc .cd_body{
-    height: 800px;
-    border-style: solid;
+.contenedor_dc .dc_body{
+    height: 1000px;
+    
+}
+
+.titulos_dc{
+    text-align: center;
+    background-image: linear-gradient(to bottom,lightgrey,grey);
+    height: 60px;
+}
+
+.contenedor_img_s_dc{
+    width: 100%;
+    background-image: linear-gradient(to top,lightgrey,grey);
+    height: 500px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.img_s_dc{
+    margin: 50px;
+    margin-left: 80px;
+}
+
+.img_s_dc img{
+    border-radius: 190px;
+}
+
+.img_s_dc p, h3{
+    margin-right: 10px;
+}
+
+.img_s_dc p{
+    text-align: center;
+}
+
+.img_s_dc h3{
+    margin-top: 5px;
+    text-align: center;
+    margin-bottom: -10px;
+}
+
+.contenedor_nuevos_imgs_dc{
+    width: 100%;
+    height: 500px;
+    background-image: linear-gradient(to top,lightgrey,grey);
+    display: flex;
+    justify-content: space-between;
+}
+
+.imgs_nuevos_dc{
+    margin: 40px;
+    margin-left: 90px;
+}
+
+.imgs_nuevos_dc p,h4{
+    margin-right: 50px;
+}
+
+.imgs_nuevos_dc p{
+    text-align: center;
+}
+
+.imgs_nuevos_dc h4{
+    margin-top: 5px;
+    text-align: center;
+    margin-bottom: -10px;
+}
+
+/*SECTION MARVEL*/
+
+.contenedor_marvel{
+    margin-top: 200px;
+}
+
+.contenedor_marvel .marvel_header{
+    height: 240px;
+    
+    background-image: linear-gradient(to right,#E90023,#ff0000);
+    padding-top: 30px;
+}
+
+#marvel_inicio{
+    top: 30px;
+    right: 135px;
+    text-decoration: none;
+    font-size: large;
+    font-style: bold;
+    color: black;
+    cursor: pointer;
+}
+
+.contenedor_marvel .marvel_body{
+    height: 1000px;
+    
+}
+
+.titulos_marvel{
+    text-align: center;
+    background-image: linear-gradient(to bottom,lightgrey,grey);
+    height: 60px;
+}
+
+.contenedor_img_s_marvel{
+    width: 100%;
+    background-image: linear-gradient(to top,lightgrey,grey);
+    height: 500px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.img_s_marvel{
+    margin: 50px;
+    margin-left: 80px;
+}
+
+.img_s_marvel img{
+    border-radius: 190px;
+}
+
+.img_s_marvel p, h3{
+    margin-right: 10px;
+}
+
+.img_s_marvel p{
+    text-align: center;
+}
+
+.img_s_marvel h3{
+    margin-top: 5px;
+    text-align: center;
+    margin-bottom: -10px;
+}
+
+.contenedor_nuevos_imgs_marvel{
+    width: 100%;
+    height: 500px;
+    background-image: linear-gradient(to top,lightgrey,grey);
+    display: flex;
+    justify-content: space-between;
+}
+
+.imgs_nuevos_marvel{
+    margin: 40px;
+    margin-left: 90px;
+}
+
+.imgs_nuevos_marvel p,h4{
+    margin-right: 50px;
+}
+
+.imgs_nuevos_marvel p{
+    text-align: center;
+}
+
+.imgs_nuevos_marvel h4{
+    margin-top: 5px;
+    text-align: center;
+    margin-bottom: -10px;
+}
+
+/*SECTION LIBROS*/
+
+.titulo_libros{
+    text-align: center;
+}
+
+.titulo_libros h1{
+    font-size: 40px;
+}
+.titulo_libros a{
+    text-decoration: none;
+    font-weight: bold;
+    color: black;
+}
+
+.contenedor_libros{
+    margin-top: 200px;
+}
+
+.contenedor_libros .libros_header{
+    height: 240px;
+    
+    background-color: grey;
+    padding-top: 30px;
+}
+
+.contenedor_nuevos_imgs_libros{
+    width: 100%;
+    background-image: linear-gradient(to top,lightgrey,grey);
+    height: 500px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.imgs_nuevos_libros{
+    margin: 50px;
+    margin-left: 80px;
+}
+
+.contenedor_nuevos_imgs_libros1{
+    width: 100%;
+    background-image: linear-gradient(to top,grey,lightgrey);
+    height: 500px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.imgs_nuevos_libros1{
+    margin: 50px;
+    margin-left: 80px;
+}
+
+/*FOOTER*/
+footer{
+    display: flex;
+    width: 100%;
+    height: 150px;
+    margin-top: 920px;
+    background-color: grey;
+    border: solid 1px grey;
+    justify-content: center;
+    align-items: center;
+}
+
+footer h3{
+    cursor: pointer;
+    margin-left: 20px;
+}
+
+footer a{
+    margin-right: 20px;
+    cursor: pointer;
+    text-decoration: none;
+    font-weight: bold;
+    font-family: 'Bangers', cursive;
+    font-size: 30px;
+    color: black;
 }
